--- a/css/home.css
+++ b/css/home.css
@@ -53,38 +53,41 @@ body h1{
 
 .introduction p{
     position: absolute;
+    margin: 0 0 10px 10px;
     bottom: 70vh;
     right: 33vh;
+    width: 30%;
     opacity: 0;
-    text-align: right;
-}
-.introduction h1:hover{
-    background-color: var(--background-color);
-    color: var(--page-color);
-    transition: background-color 0.5s, color 0.5s;
+    text-align: left;
 }
 .introduction img{
-    position: absolute;
-    right: 3vh;
-    top: 35vh;
-    opacity: 0;
+    position: relative;
+    right: 1vh;
+    top: 0;
     float: right;
     margin: 0 0 10px 10px;
     border-radius: 8px;
 }
+.introduction h1:hover{
+    background-color: var(--background-color);
+    color: var(--page-color);
+    transition: background-color 0.2s, color 0.5s;
+    height: 50%;
+    width: 35%;
+    z-index: 1;
+}
+
 .introduction:hover p{
     position: absolute;
-    right: 33vh;
-    top: 35%;
-    width: 30%;
+    right: 0;
+    top: 30%;
+    width: 35%;
     padding: 20px;
     opacity: 1;
     transition: opacity 0.5s;
+    z-index: 1;
 }
-.introduction:hover img{
-    opacity: 1;
-    transition: opacity 0.5s;
-}
+
 .assignments h2{
     position: absolute;
     top: 20%;
@@ -109,16 +112,19 @@ body h1{
     background-color: var(--intro-color);
     color: var(--page-color);
     transition: background-color 0.5s, color 0.5s;
+    height: 50%;
+    z-index: 1;
 }
 .assignments:hover p{
     position: absolute;
-    left: -2vh;
+    left: 0vh;
     top: 28%;
-    width: 20%;
+    width: 15%;
     height: 40%;
     padding: 40px;
     opacity: 1;
     transition: opacity 0.5s;
+    z-index: 1;
 }
 .assignments:hover ol{
     position: absolute;
@@ -130,11 +136,38 @@ body h1{
     margin: 30px;
     opacity: 1;
     transition: opacity 0.5s;
+    z-index: 1;
 }
 
-.portfolio{
+.portfolio h2{
+    position: absolute;
+    height: 5%;
+    background-color: var(--intro-color);
+    margin: 20px;
     padding: 20px;
+    top: 40%;
+    right: 20%;
+    background-color: var(--intro-color);
+    border-radius: 8px;
+    font-size: 2em;
+    text-align: center;
 }
+.portfolio p, .portfolio ol{
+    position: absolute;
+    bottom: 70vh;
+    right: 20vh;
+    width: 30%;
+    opacity: 0;
+    text-align: left;
+}
+
+.portfolio h2:hover{
+    z-index: 1;
+    background-color: var(--background-color);
+    color: var(--page-color);
+    transition: background-color 0.5s, color 0.5s;
+}
+
 .contact{
     padding: 20px;
 }
