--- a/css/home.css
+++ b/css/home.css
@@ -141,31 +141,57 @@ body h1{
 
 .portfolio h2{
     position: absolute;
-    height: 5%;
-    background-color: var(--intro-color);
-    margin: 20px;
-    padding: 20px;
+    background-color: rgb(255, 146, 30);
     top: 40%;
     right: 20%;
-    background-color: var(--intro-color);
+    height: 5%;
+    margin: 20px;
+    padding: 20px;
     border-radius: 8px;
     font-size: 2em;
     text-align: center;
 }
+
 .portfolio p, .portfolio ol{
     position: absolute;
-    bottom: 70vh;
-    right: 20vh;
+    bottom: 30vh;
+    right: 18%;
     width: 30%;
+    height: 100%;
     opacity: 0;
-    text-align: left;
 }
 
 .portfolio h2:hover{
     z-index: 1;
     background-color: var(--background-color);
     color: var(--page-color);
+    height: 50%;
+    width: 35%;
     transition: background-color 0.5s, color 0.5s;
+}
+.portfolio:hover p{
+    position: absolute;
+    right: -50%;
+    width: 100%;
+    height: 100%;
+    top: 48%;
+    padding: 10px;
+    opacity: 1;
+    transition: opacity 0.5s;
+    z-index: 1;
+}
+
+.portfolio:hover ol{
+    position: absolute;
+    list-style-position: inside;
+    right: 25%;
+    top: 55%;
+    width: 30%;
+    height: 30%;
+    opacity: 1;
+    transition: opacity 0.5s;
+    margin: 10px;
+    z-index: 1;
 }
 
 .contact{
