--- a/css/home.css
+++ b/css/home.css
@@ -23,15 +23,38 @@ li {
 }
 
 body {
-    background: linear-gradient(90deg, var(--background-color), var(--intro-color));
     background-color: var(--background-color);
-    color: var(--page-color);
+    background-image: url(../img/Ocean\ Sunset.png);
+    background-blend-mode: soft-light;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
-body h1{
+body h1, h2{
+    color: white;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1.5;
+    text-decoration-color: rgb(255, 101, 30);
+    text-shadow: rgb(255, 131, 22);
+}
+
+body p{
+    line-height: 1.4;
+}
+
+body p::first-letter{
+    font-size: larger;
+    font-weight: bold;
+}
+
+body a{
+    text-decoration: none;
+    font-style: italic;
+}
+
+body a:hover{
+    color: white;
 }
 
 .navbar{
@@ -44,7 +67,7 @@ body h1{
     top: 20%;
     right: 0;
     height: 5%;
-    background-color: var(--intro-color);
+    background-color: var(--background-color);
     border-radius: 8px;
     margin: 20px;
     padding: 20px;
@@ -55,7 +78,7 @@ body h1{
     position: absolute;
     margin: 0 0 10px 10px;
     bottom: 70vh;
-    right: 33vh;
+    right: 10vh;
     width: 30%;
     opacity: 0;
     text-align: left;
@@ -69,7 +92,7 @@ body h1{
     border-radius: 8px;
 }
 .introduction h1:hover{
-    background-color: var(--background-color);
+    background-color: var(--intro-color);
     color: var(--page-color);
     transition: background-color 0.2s, color 0.5s;
     height: 50%;
@@ -141,7 +164,7 @@ body h1{
 
 .portfolio h2{
     position: absolute;
-    background-color: rgb(255, 146, 30);
+    background-color: var(--background-color);
     top: 40%;
     right: 20%;
     height: 5%;
@@ -155,15 +178,15 @@ body h1{
 .portfolio p, .portfolio ol{
     position: absolute;
     bottom: 30vh;
-    right: 18%;
+    right: 0;
     width: 30%;
-    height: 100%;
+    height: 30%;
     opacity: 0;
 }
 
 .portfolio h2:hover{
     z-index: 1;
-    background-color: var(--background-color);
+    background-color: var(--intro-color);
     color: var(--page-color);
     height: 50%;
     width: 35%;
@@ -171,10 +194,11 @@ body h1{
 }
 .portfolio:hover p{
     position: absolute;
-    right: -50%;
-    width: 100%;
-    height: 100%;
+    box-shadow: 0 4px 24px 0 rgba(0,0,0,0.25);
+    right: 30%;
     top: 48%;
+    width: 22%;
+    height: 5%;
     padding: 10px;
     opacity: 1;
     transition: opacity 0.5s;
@@ -187,22 +211,122 @@ body h1{
     right: 25%;
     top: 55%;
     width: 30%;
-    height: 30%;
     opacity: 1;
     transition: opacity 0.5s;
     margin: 10px;
     z-index: 1;
 }
 
-.contact{
+.contact h2{
+    position: absolute;
+    background-color: var(--background-color);
+    top: 40%;
+    left: 15%;
+    height: 5%;
+    margin: 20px;
     padding: 20px;
+    border-radius: 8px;
+    font-size: 2em;
+    text-align: center;
 }
-.schedule{
+
+.contact address{
+    position: absolute;
+    bottom: 30vh;
+    left: 15%;
+    width: 30%;
+    height: 100%;
+    opacity: 0;
+}
+
+.contact h2:hover{
+    z-index: 1;
+    background-color: var(--intro-color);
+    color: var(--page-color);
+    height: 10%;
+    transition: background-color 0.5s, color 0.5s;
+}
+
+.contact:hover address{
+    position: absolute;
+    left: 19%;
+    font-size: larger;
+    top: 52%;
+    padding: 10px;
+    height: 5%;
+    opacity: 1;
+    transition: opacity 0.5s;
+    z-index: 1;
+}
+
+.schedule h2{
+    position: absolute;
+    background-color: var(--background-color);
+    top: 60%;
+    left: 43%;
+    height: 5%;
+    margin: 20px;
     padding: 20px;
+    border-radius: 8px;
+    font-size: 2em;
+    text-align: center;
 }
+
+.schedule p, .schedule table{
+    position: absolute;
+    bottom: 10vh;
+    left: 40%;
+    width: 30%;
+    height: 30%;
+    opacity: 0;
+}
+
+tr:nth-child(even) {
+    background-color: #ff982b; /* Light gray for even rows */
+}
+tr:nth-child(odd) {
+    background-color: #ffb522; /* White for odd rows */
+}
+
+.schedule h2:hover{
+    z-index: 1;
+    background-color: var(--intro-color);
+    color: var(--page-color);
+    text-align: center;
+    left: 30%;
+    height: 50%;
+    width: 35%;
+    transition: background-color 0.5s, color 0.5s;
+}
+
+.schedule:hover p{
+    position: absolute;
+    left: 43%;
+    top: 68%;
+    padding: 10px;
+    opacity: 1;
+    transition: opacity 0.5s;
+    z-index: 1;
+}
+
+.schedule:hover table{
+    position: absolute;
+    left: 40%;
+    top: 75%;
+    width: 20%;
+    height: 40%;
+    opacity: 1;
+    transition: opacity 0.5s;
+    margin: 10px;
+    z-index: 1;
+}
+
 footer{
+    background-color: var(--background-color);
+    color: white;
     position: fixed;
     bottom: 0;
     width: 100%;
     text-align: right;
+    border-radius: 16px 16px 0 0;
 }
